# n_body

./: .gitignore  Cargo.toml  aaaaaaaa.ron  belt.ron  belt_template.ron  plain.ron  plain_template.ron  references.txt  settings.ron  thingy.txt
doc/: crates.js  search-index.js
doc/n_body/: all.html  fn.main.html  fn.window_conf.html
doc/n_body/config/: enum.DistributionMethod.html  enum.DistributionMethodEmpty.html  fn.my_config.html
doc/n_body/controls/: fn.fix_aspect_ratio.html  fn.zoom.html  index.html  sidebar-items.js
doc/n_body/game_loop/: fn.adaptive_simrate.html  fn.game_loop.html
doc/n_body/mov_avg/: index.html  sidebar-items.js  struct.MovingAverage.html
doc/n_body/particle/: index.html  sidebar-items.js  struct.MinMax.html  struct.Particle.html  trait.RandomParticleGen.html
doc/n_body/physics/: fn.collisions.html  fn.move_bodies.html  fn.physics_loop.html  index.html  sidebar-items.js
doc/n_body/start_screen/: fn.start_screen.html  index.html  sidebar-items.js
doc/src/n_body/: controls.rs.html  game_loop.rs.html  main.rs.html  mov_avg.rs.html  physics.rs.html
docs/: search-index.js  settings.html  source-files.js
docs/n_body/: all.html  fn.amain.html  index.html  sidebar-items.js
docs/n_body/config/: index.html  sidebar-items.js  struct.Settings.html
docs/n_body/controls/: constant.ZOOM_FACTOR.html  index.html  sidebar-items.js
docs/n_body/game_loop/: fn.adaptive_simrate.html  fn.game_loop.html  index.html  sidebar-items.js
docs/n_body/physics/: fn.gravity.html  fn.move_particles.html  index.html  sidebar-items.js
docs/n_body/start_screen/: fn.config_screen.html  fn.splash_screen.html  index.html
docs/src/n_body/: config.rs.html  controls.rs.html  game_loop.rs.html  particle.rs.html  physics.rs.html  (+1 more)
src/: config.rs  controls.rs  game_loop.rs  main.rs  mov_avg.rs  particle.rs  physics.rs  start_screen.rs  tools.rs
src/particle/: belt_random.rs  plain_random.rs  random.rs  random_particle_gen.rs  random_particle_generator.rs  tools.rs
src/start_screen/: credits.rs  param_edit.rs
(+54 files in other folders)
